tests/errors/reserved-cell-name.futil
import "primitives/std.lib";
component main() -> () {
  cells {
    clk = prim std_reg(32);
  }
  wires {
  }
  control {
  }
}
