tests/errors/reserved-cell-name.expect
---CODE---
1
---STDERR---
Error: 
4 |    clk = prim std_reg(32);
  |    ^^^ Use of reserved keyword: clk
